--- a/app/src/main/res/layout/activity_connected_devices.xml
+++ b/app/src/main/res/layout/activity_connected_devices.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".ConnectedDevicesActivity">
 
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar">
+    </include>
+
     <TextView
         android:id="@+id/tv_connectedDevices"
         android:layout_width="wrap_content"
@@ -17,7 +23,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="@dimen/_30sdp"
         android:layout_marginStart="@dimen/_10sdp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginTop="@dimen/_10sdp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_connectedDevices"
