--- a/app/src/main/res/layout/activity_dslinformation.xml
+++ b/app/src/main/res/layout/activity_dslinformation.xml
@@ -7,6 +7,16 @@
     android:padding="@dimen/_16sdp"
     tools:context=".DSLInformationActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar">
+    </include>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
     <TextView
         android:id="@+id/tV_dslInfo"
         android:layout_width="match_parent"
@@ -14,13 +24,16 @@
         android:background="@color/light_grey"
         android:fontFamily="@font/montserrat_semi_bold"
         android:gravity="center"
+        android:visibility="gone"
         android:padding="@dimen/_8sdp"
         android:text="DSL Information"
         android:textColor="@color/purple"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginTop="@dimen/_10sdp" />
 
     <TextView
         android:id="@+id/dslSync"
@@ -285,5 +298,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:visibility="visible" />
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
