--- a/app/src/main/res/layout/activity_wlan_access.xml
+++ b/app/src/main/res/layout/activity_wlan_access.xml
@@ -5,9 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/_16sdp"
     tools:context=".WlanAccessActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar">
+    </include>
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/_20sdp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
     <TextView
         android:id="@+id/tV_wlanAccess"
         android:layout_width="match_parent"
@@ -15,6 +25,7 @@
         android:background="@color/light_grey"
         android:gravity="center"
         android:padding="@dimen/_8sdp"
+        android:visibility="gone"
         android:text="WLAN Access"
         android:fontFamily="@font/montserrat_bold"
         android:textColor="@color/purple"
@@ -22,7 +33,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:layout_marginTop="@dimen/_10sdp" />
 
     <TextView
         android:id="@+id/tV_wlanWPS"
@@ -36,9 +48,10 @@
 
     <CheckBox
         android:id="@+id/cB_WPS"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:clickable="false"
+        android:background="@drawable/gray_checkbox_background"
         app:layout_constraintBottom_toBottomOf="@+id/tV_wlanWPS"
         app:layout_constraintEnd_toStartOf="@+id/tV_enableWPS"
         app:layout_constraintStart_toEndOf="@+id/tV_wlanWPS"
@@ -49,6 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enable WPS"
+        android:visibility="gone"
         android:fontFamily="@font/montserrat_medium"
         app:layout_constraintBottom_toBottomOf="@+id/cB_WPS"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,4 +78,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:visibility="visible" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
