--- a/app/src/main/res/layout/activity_wlaninfo.xml
+++ b/app/src/main/res/layout/activity_wlaninfo.xml
@@ -4,143 +4,157 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/_16sdp"
     tools:context=".WLANInfoActivity">
 
-    <TextView
-        android:id="@+id/tV_wlanInfo"
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"></include>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/light_grey"
-        android:gravity="center"
-        android:padding="@dimen/_8sdp"
-        android:text="WLAN Information"
-        android:fontFamily="@font/montserrat_bold"
-        android:textColor="@color/purple"
-        android:textSize="@dimen/_16ssp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:padding="@dimen/_20sdp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-    <TextView
-        android:id="@+id/tV_SSid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="SSID:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tV_wlanInfo" />
+        <TextView
+            android:id="@+id/tV_wlanInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@color/light_grey"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center"
+            android:padding="@dimen/_8sdp"
+            android:text="WLAN Information"
+            android:textColor="@color/purple"
+            android:textSize="@dimen/_16ssp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tV_onOF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="ON/OF:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tV_SSid" />
+        <TextView
+            android:id="@+id/tV_SSid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="SSID:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tV_wlanInfo" />
 
-    <TextView
-        android:id="@+id/tV_macAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="MAC Address:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tV_onOF" />
+        <TextView
+            android:id="@+id/tV_onOF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="ON/OF:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tV_SSid" />
 
-    <TextView
-        android:id="@+id/tv_channel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="Channel:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tV_macAddress" />
+        <TextView
+            android:id="@+id/tV_macAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="MAC Address:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tV_onOF" />
 
-    <TextView
-        android:id="@+id/tv_transmitPower"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="Transmit Power (Percentage):"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_channel" />
+        <TextView
+            android:id="@+id/tv_channel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Channel:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tV_macAddress" />
 
-    <TextView
-        android:id="@+id/tV_region"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="Region:"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_transmitPower" />
+        <TextView
+            android:id="@+id/tv_transmitPower"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Transmit Power (%): "
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_channel" />
 
-    <TextView
-        android:id="@+id/tV_ssidNam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintBottom_toBottomOf="@+id/tV_SSid"
-        app:layout_constraintStart_toStartOf="@+id/tv_macNum" />
+        <TextView
+            android:id="@+id/tV_region"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Region:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_transmitPower" />
 
-    <TextView
-        android:id="@+id/tV_on"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="OFF"
-        app:layout_constraintBottom_toBottomOf="@+id/tV_onOF"
-        app:layout_constraintStart_toStartOf="@+id/tv_macNum" />
+        <TextView
+            android:id="@+id/tV_ssidNam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/tV_SSid"
+            app:layout_constraintStart_toEndOf="@id/tv_transmitPower"  />
 
-    <TextView
-        android:id="@+id/tv_macNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintBottom_toBottomOf="@+id/tV_macAddress"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <TextView
+            android:id="@+id/tV_on"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="OFF"
+            app:layout_constraintBottom_toBottomOf="@+id/tV_onOF"
+            app:layout_constraintStart_toEndOf="@id/tv_transmitPower"  />
 
-    <TextView
-        android:id="@+id/tv_channelNum"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_channel"
-        app:layout_constraintStart_toStartOf="@+id/tv_macNum" />
+        <TextView
+            android:id="@+id/tv_macNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/tV_macAddress"
+            app:layout_constraintStart_toEndOf="@id/tv_transmitPower"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/tV_transmitNum"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_transmitPower"
-        app:layout_constraintStart_toStartOf="@+id/tv_macNum"
-        app:layout_constraintTop_toTopOf="@+id/tv_transmitPower" />
+        <TextView
+            android:id="@+id/tv_channelNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_channel"
+            app:layout_constraintStart_toEndOf="@id/tv_transmitPower"  />
 
-    <TextView
-        android:id="@+id/tV_regionName"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/tV_region"
-        app:layout_constraintStart_toStartOf="@+id/tv_macNum" />
+        <TextView
+            android:id="@+id/tV_transmitNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_transmitPower"
+            app:layout_constraintStart_toEndOf="@id/tv_transmitPower"
+            app:layout_constraintTop_toTopOf="@+id/tv_transmitPower" />
 
-    <ProgressBar
-        android:id="@+id/progress_circular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:progressTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="visible" />
+        <TextView
+            android:id="@+id/tV_regionName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            app:layout_constraintBottom_toBottomOf="@+id/tV_region"
+            app:layout_constraintStart_toEndOf="@id/tv_transmitPower" />
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/black"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
