--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RouterChefDemo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.RouterChefDemo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
         <item name="android:forceDarkAllowed">false</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/purple</item>
@@ -13,6 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorControlNormal">@color/purple</item>
+        <item name="android:fontFamily">@font/montserrat_bold</item>
+
     </style>
 
 </resources>
