--- a/app/src/main/res/drawable/gray_checkbox_background.xml
+++ b/app/src/main/res/drawable/gray_checkbox_background.xml
@@ -1,13 +1,14 @@
 <!-- gray_checkbox_background.xml -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="false">
-        <shape android:shape="rectangle">
-            <solid android:color="#CCCCCC" /> <!-- Set the gray color here -->
+        <shape
+            android:shape="rectangle">
+            <solid android:color="#A0A0A0" /> <!-- Set the gray color here -->
         </shape>
     </item>
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="#CCCCCC" /> <!-- Set the same gray color for checked state -->
+            <solid android:color="#A0A0A0" /> <!-- Set the same gray color for checked state -->
         </shape>
     </item>
 </selector>
