--- a/app/src/main/res/layout/activity_wlan_access.xml
+++ b/app/src/main/res/layout/activity_wlan_access.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +8,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar">
-    </include>
+        layout="@layout/toolbar"></include>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,64 +16,69 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/_20sdp"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
-    <TextView
-        android:id="@+id/tV_wlanAccess"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/light_grey"
-        android:gravity="center"
-        android:padding="@dimen/_8sdp"
-        android:visibility="gone"
-        android:text="WLAN Access"
-        android:fontFamily="@font/montserrat_bold"
-        android:textColor="@color/purple"
-        android:textSize="@dimen/_16ssp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_marginTop="@dimen/_10sdp" />
 
-    <TextView
-        android:id="@+id/tV_wlanWPS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_24sdp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="WLAN WPS"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tV_wlanAccess" />
+        <TextView
+            android:id="@+id/tV_wlanAccess"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/light_grey"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center"
+            android:padding="@dimen/_8sdp"
+            android:text="WLAN Access"
+            android:textColor="@color/purple"
+            android:textSize="@dimen/_16ssp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/progress_circular"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/cB_WPS"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:clickable="false"
-        app:layout_constraintBottom_toBottomOf="@+id/tV_wlanWPS"
-        app:layout_constraintEnd_toStartOf="@+id/tV_enableWPS"
-        app:layout_constraintStart_toEndOf="@+id/tV_wlanWPS"
-        app:layout_constraintTop_toTopOf="@+id/tV_wlanWPS" />
+        <TextView
+            android:id="@+id/tV_wlanWPS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_24sdp"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="WLAN WPS"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tV_wlanAccess" />
 
-    <TextView
-        android:id="@+id/tV_enableWPS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enable WPS"
-        android:visibility="gone"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintBottom_toBottomOf="@+id/cB_WPS"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tV_wlanWPS"
-        app:layout_constraintTop_toTopOf="@+id/cB_WPS" />
-    <ProgressBar
-        android:id="@+id/progress_circular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:progressTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="visible" />
+        <CheckBox
+            android:id="@+id/cB_WPS"
+
+            android:layout_width="@dimen/_16sdp"
+            android:layout_height="@dimen/_16sdp"
+            android:clickable="false"
+            android:background="@drawable/gray_checkbox_background"
+            android:button="@drawable/gray_checkbox_background"
+            app:layout_constraintBottom_toBottomOf="@+id/tV_wlanWPS"
+            app:layout_constraintEnd_toStartOf="@+id/tV_enableWPS"
+            app:layout_constraintStart_toEndOf="@+id/tV_wlanWPS"
+            app:layout_constraintTop_toTopOf="@+id/tV_wlanWPS" />
+
+        <TextView
+            android:id="@+id/tV_enableWPS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat_medium"
+            android:text="Enable WPS"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/cB_WPS"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tV_wlanWPS"
+            app:layout_constraintTop_toTopOf="@+id/cB_WPS" />
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="@color/black"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
