--- a/app/src/main/res/layout/activity_wlansettings.xml
+++ b/app/src/main/res/layout/activity_wlansettings.xml
@@ -11,16 +11,16 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar">
-    </include>
+        layout="@layout/toolbar"></include>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cL_Parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+
         android:padding="@dimen/_8sdp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_marginTop="@dimen/_10sdp">
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <TextView
             android:id="@+id/tV_basicSettings"
@@ -30,9 +30,9 @@
             android:background="@color/light_grey"
             android:clickable="true"
             android:focusable="true"
+            android:fontFamily="@font/montserrat_semi_bold"
             android:padding="@dimen/_8sdp"
             android:text="Basic Settings"
-            android:fontFamily="@font/montserrat_semi_bold"
             android:textColor="@color/purple"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,8 +43,8 @@
             android:id="@+id/cL_basicSettings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_16sdp"
             android:visibility="gone"
+            android:layout_marginStart="@dimen/_16sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tV_basicSettings">
@@ -64,11 +64,13 @@
 
             <CheckBox
                 android:id="@+id/cB_enableWlan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:background="@drawable/gray_checkbox_background"
+                android:button="@drawable/gray_checkbox_background"
+                android:clickable="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:clickable="false"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -83,9 +85,9 @@
             android:background="@color/light_grey"
             android:clickable="true"
             android:focusable="true"
+            android:fontFamily="@font/montserrat_semi_bold"
             android:padding="@dimen/_8sdp"
             android:text="WLAN Encryption"
-            android:fontFamily="@font/montserrat_semi_bold"
             android:textColor="@color/purple"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,40 +104,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tV_wlanEncryp">
 
-
-
-
-
             <TextView
                 android:id="@+id/tV_enSSid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="Enable SSID :"
                 android:textColor="@color/black"
-                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"  />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tV_maxClients"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="Maximum Clients"
                 android:textColor="@color/black"
-                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_enSSid" />
 
 
-
-
             <CheckBox
                 android:id="@+id/cB_enableSSid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:background="@drawable/gray_checkbox_background"
+                android:button="@drawable/gray_checkbox_background"
                 android:clickable="false"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_enSSid"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -146,8 +144,8 @@
                 android:id="@+id/tV_clientsNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/MaxClientsNum"
                 android:fontFamily="@font/montserrat_medium"
+                android:text="@string/MaxClientsNum"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/cB_enableSSid" />
@@ -162,8 +160,8 @@
             android:background="@color/light_grey"
             android:clickable="true"
             android:focusable="true"
-            android:padding="@dimen/_8sdp"
             android:fontFamily="@font/montserrat_semi_bold"
+            android:padding="@dimen/_8sdp"
             android:text="Advanced Settings"
             android:textColor="@color/purple"
             android:textStyle="bold"
@@ -176,9 +174,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tV_advancedSettings">
 
@@ -188,8 +185,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
-                android:text="Transmit Power (Percentage)"
                 android:fontFamily="@font/montserrat_medium"
+                android:text="Transmit Power (Percentage)"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -198,8 +195,8 @@
                 android:id="@+id/tv_transmitPower"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:fontFamily="@font/montserrat_medium"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_transmitPower"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_transmitPower"
@@ -213,14 +210,15 @@
                 android:fontFamily="@font/montserrat_medium"
                 android:text="Enable WMM (QoS) :"
                 android:textColor="@color/black"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tV_transmitPower" />
 
             <CheckBox
                 android:id="@+id/cB_wMM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:background="@drawable/gray_checkbox_background"
+                android:button="@drawable/gray_checkbox_background"
                 android:clickable="false"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_wMM"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -232,9 +230,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:fontFamily="@font/montserrat_medium"
                 android:text="11 n bandwidth :"
                 android:textColor="@color/black"
-                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tV_wMM" />
 
@@ -242,10 +240,10 @@
                 android:id="@+id/tv_11nValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_11nbandWidth"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:fontFamily="@font/montserrat_medium"
                 app:layout_constraintStart_toEndOf="@+id/tV_11nbandWidth"
                 app:layout_constraintTop_toTopOf="@+id/tV_11nbandWidth" />
 
@@ -254,8 +252,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_16sdp"
-                android:text="11n MCS:"
                 android:fontFamily="@font/montserrat_medium"
+                android:text="11n MCS:"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tV_11nbandWidth" />
@@ -264,8 +262,8 @@
                 android:id="@+id/tV_11nMCSValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:fontFamily="@font/montserrat_medium"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="@+id/tV_11nMCS"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_11nMCS"
@@ -288,7 +286,6 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_medium"
                 android:textColor="@color/black"
-
                 app:layout_constraintBottom_toBottomOf="@+id/tV_frequency"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tV_frequency"
@@ -302,11 +299,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:progressTint="@color/black"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="visible" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
