--- a/app/src/main/res/layout/activity_laninterface.xml
+++ b/app/src/main/res/layout/activity_laninterface.xml
@@ -187,6 +187,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="false"
+                    style="@style/GrayCheckboxStyle"
+
                     android:fontFamily="@font/montserrat_medium"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -280,6 +282,7 @@
                     android:gravity="center"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:clickable="false"
+                    style="@style/GrayCheckboxStyle"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_enableDHCB"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -312,6 +315,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:clickable="false"
+                    style="@style/GrayRadioButtonStyle"
                     android:fontFamily="@font/montserrat_medium"
                     android:text="CPE acts as the DNS Proxy"
                     app:layout_constraintBottom_toBottomOf="@+id/tV_dnsMode"
@@ -365,6 +369,8 @@
                     android:layout_height="0dp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:clickable="false"
+                    style="@style/GrayCheckboxStyle"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tV_enableRA"
@@ -413,6 +419,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="false"
+                    style="@style/GrayCheckboxStyle"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tV_enableIPV6"
@@ -463,6 +471,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="false"
+                    style="@style/GrayCheckboxStyle"
+
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tV_enableUpnp"
@@ -517,6 +527,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="false"
+                    style="@style/GrayCheckboxStyle"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/tV_enableTr064"
