--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
     <color name="light_grey">#f0f0f0</color>
     <color name="purple">#702283</color>
     <color name="colorPrimary">#702283</color>
-
+    <color name="gray">#808080</color>
 
 </resources>
